2014-10-20  Roland McGrath  <roland@hack.frob.com>

	* nptl/version.c (__nptl_main): Use normal __write rather than
	INTERNAL_SYSCALL.
	(banner): Update copyright years.

	* nptl/pthread_rwlock_timedrdlock.c: #include <sys/time.h> before using
	gettimeofday.
	* nptl/pthread_rwlock_timedwrlock.c: Likewise.
	* nptl/pthread_cond_timedwait.c: Likewise.
	* nptl/pthread_mutex_timedlock.c: Likewise.
	* nptl/sem_timedwait.c: Likewise.

	* sysdeps/nptl/bits/libc-lock.h
	[_LIBC && (!NOT_IN_libc || IS_IN_libpthread)]
	(__libc_lock_init_recursive): Return void, not 0.
	* sysdeps/nptl/bits/libc-lockP.h (__libc_lock_init): Likewise.
	(__libc_rwlock_init): Likewise.
	* sysdeps/nptl/bits/stdio-lock.h (_IO_lock_init): Likewise.

2014-10-20  Torvald Riegel  <triegel@redhat.com>

	[BZ #15215]
	* nptl/pthread_once.c (__pthread_once): Split out fast path to ...
	(__pthread_once_slow): ... here.
	* sysdeps/unix/sysv/linux/i386/pthread_once.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/pthread_once.S: Remove file.

2014-10-20  Torvald Riegel  <triegel@redhat.com>

	[BZ #15215]
	* nptl/pthreadP.h (__PTHREAD_ONCE_INPROGRESS, __PTHREAD_ONCE_DONE,
	__PTHREAD_ONCE_FORK_GEN_INCR): New.
	* sysdeps/nptl/fork.c (__libc_fork): Use them.
	* nptl/pthread_once.c (__pthread_once): Likewise.
	Update comments.

2014-10-20  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14138]
	* sysdeps/unix/syscalls.list (readv): Use __libc_readv as strong
	name.
	(writev): Use __libc_writev as strong name.
	* sysdeps/unix/sysv/linux/readv.c: Remove file.
	* sysdeps/unix/sysv/linux/writev.c: Likewise.

2014-10-17  Roland McGrath  <roland@hack.frob.com>

	* nptl/createthread.c (TLS_DEFINE_INIT_TP, TLS_VALUE): Macros removed.

	* sysdeps/i386/nptl/tls.h
	(THREAD_SELF_SYSINFO, THREAD_SYSINFO): Macros removed.
	[NEED_DL_SYSINFO] (SETUP_THREAD_SYSINFO, CHECK_THREAD_SYSINFO):
	New macros.
	* sysdeps/ia64/nptl/tls.h [NEED_DL_SYSINFO]
	(SETUP_THREAD_SYSINFO, CHECK_THREAD_SYSINFO): New macros.